update validation settings earlier

--- a/Purchasing.Mvc/Views/Order/Request.cshtml
+++ b/Purchasing.Mvc/Views/Order/Request.cshtml
@@ -12,6 +12,7 @@
 
 @section AdditionalScripts{
      <script type="text/javascript">
+        $.validator.setDefaults({ ignore: ':hidden :not(.chzn-done)' }); //do not ignore hidden chosen select lists for validation
 
         $(function () {
             @Html.Partial("_Options")
