--- a/Purchasing.Mvc/Views/Order/Copy.cshtml
+++ b/Purchasing.Mvc/Views/Order/Copy.cshtml
@@ -12,6 +12,7 @@
     @Scripts.Render("~/bundles/order")
 
     <script type="text/javascript">
+        $.validator.setDefaults({ ignore: ':hidden :not(.chzn-done)' }); //do not ignore hidden chosen select lists
 
         $(function () {
             @Html.Partial("_Options")
