--- a/Purchasing.Mvc/Views/HistoryAjax/RecentActivity.cshtml
+++ b/Purchasing.Mvc/Views/HistoryAjax/RecentActivity.cshtml
@@ -1,4 +1,5 @@
-﻿@using Purchasing.Mvc.Helpers
+﻿@using Purchasing.Core.Helpers
+@using Purchasing.Mvc.Helpers
 @model Purchasing.Core.Queries.OrderTrackingHistory
 
 @if (Model == null)
@@ -7,7 +8,7 @@
     <p>@Html.ActionLink("Request a new order >", "SelectWorkgroup", "Order")</p>
 }
 else {
-    <p><span class="time-ago">@string.Format("{0} ago,", (DateTime.Now - Model.TrackingDate).ToLongString())</span> you worked on</p>
+    <p><span class="time-ago">@string.Format("{0} ago,", (DateTime.UtcNow.ToPacificTime() - Model.TrackingDate).ToLongString())</span> you worked on</p>
     <p class="order-details">@Html.ActionLink(Model.RequestNumber, "Review", "Order", new { id = Model.OrderId }, new { })
         <span class="requester">@Model.CreatedBy</span> requested: <span class="order-summary">@Model.DisplaySummary()</span></p>
     <p>@Html.ActionLink("View the order >", "Review", "Order", new { id = Model.OrderId }, new { })</p>
