Added defaultTag to workgroup views.

--- a/Purchasing.Mvc/Views/Wizard/Details.cshtml
+++ b/Purchasing.Mvc/Views/Wizard/Details.cshtml
@@ -28,10 +28,14 @@
 			<div class="display-label">Administrative</div>
 			<div class="display-details">@Model.Workgroup.Administrative</div>
 		</li>
-		<li>
-			<div class="display-label">Disclaimer</div>
-			<div class="display-details">@Model.Workgroup.Disclaimer</div>
-		</li>
+	    <li>
+	        <div class="display-label">Disclaimer</div>
+	        <div class="display-details">@Model.Workgroup.Disclaimer</div>
+	    </li>
+	    <li>
+	        <div class="display-label">Default Tag</div>
+            <div class="display-details">@Model.Workgroup.DefaultTag</div>
+	    </li>
 		<li>
 			<div class="display-label">Primary Organizaiton</div>
 			<div class="display-details">@Model.Workgroup.PrimaryOrganization.Name</div>
