--- a/Purchasing.Mvc/Views/Workgroup/Details.cshtml
+++ b/Purchasing.Mvc/Views/Workgroup/Details.cshtml
@@ -177,6 +177,12 @@
                     @Model.Workgroup.NotificationEmailList
                 </div>
             </li>
+            <li>
+                <div class="display-label">@Html.LabelFor(model => model.Workgroup.DefaultTag)</div>
+                <div class="display-details">
+                    @Model.Workgroup.DefaultTag
+                </div>
+            </li>
         </ul>
 
     </div>
