--- a/Purchasing.Mvc/Views/Shared/_CommonWorkgroupForm.cshtml
+++ b/Purchasing.Mvc/Views/Shared/_CommonWorkgroupForm.cshtml
@@ -105,7 +105,7 @@
         @Html.LabelFor(model=> model.Workgroup.DefaultTag)
     </div>
     <div class="editor-field">
-        <span class="showTip" title="Default Tag values to be added to all new orders created in this workgroup.">@Html.EditorFor(model => model.Workgroup.DefaultTag)</span>
+        <span class="showTip" title="Default Tag values to be added to all new orders created in this workgroup. Does not apply to admin workgroups.">@Html.EditorFor(model => model.Workgroup.DefaultTag)</span>
         @Html.ValidationMessageFor(model => model.Workgroup.DefaultTag)
     </div>
 </li>
