Added proper columns titles

--- a/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
+++ b/Purchasing.Mvc/Views/Report/ProcessingTimeSummary.cshtml
@@ -13,22 +13,21 @@
     <thead>
         <tr>
             <th>
-                Org
+                Date Created
             </th>
             <th>
                 Workgroup
             </th>
-            <th>
-                Request Number
-            </th>
-            <th>Arrived At Purchaser</th>
-            <th>Rerouted To Purchaser Date</th>
-            <th>Rerouted To Purchaser Name</th>
-            <th>ReRouted To Purchaser By</th>
-            <th>Completed By Purchaser Date</th>
-            <th>Completed By Purchaser Name</th>
-            <th>ReRoute Time</th>
-            <th>Completion Time</th>
+            <th>Request #</th>
+            <th>Time to Completion</th>
+            <th>Time to Approve</th>
+            <th>Approve</th>
+            <th>Time to Account Manager</th>
+            <th>Account Manager</th>
+            <th>Time to Purchaser</th>
+            <th>Purchaser</th>
+            <th>Complete</th>
+            <th>barchart</th>
         </tr>
     </thead>
     <tbody>
