Instructional Video Link

--- a/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
+++ b/Purchasing.Mvc/Views/Order/PayInvoice.cshtml
@@ -102,7 +102,9 @@
     @Html.Raw(rtValue)
 }
 
-
+<div id="status-message">
+    We have made some functional changes to this page. Here is a short video describing the changes: <a href="https://www.youtube.com/watch?v=bAKKMUo6-2E#t=50" target="_blank">https://www.youtube.com/watch?v=bAKKMUo6-2E#t=50</a>.
+</div>
 
 @Html.Partial("_ReviewOrderDetails", Model.ReviewOrderViewModel)
 
