oops, had time in the link

--- a/Purchasing.Mvc/Views/Order/ReceiveItems.cshtml
+++ b/Purchasing.Mvc/Views/Order/ReceiveItems.cshtml
@@ -106,7 +106,7 @@
     }
 
 <div id="status-message">
-    We have made some functional changes to this page. Here is a short video describing the changes: <a href="https://www.youtube.com/watch?v=bAKKMUo6-2E#t=50" target="_blank">https://www.youtube.com/watch?v=bAKKMUo6-2E#t=50</a>.
+    We have made some functional changes to this page. Here is a short video describing the changes: <a href="https://youtu.be/bAKKMUo6-2E" target="_blank">https://youtu.be/bAKKMUo6-2E</a>.
 </div>
 
     @Html.Partial("_ReviewOrderDetails", Model.ReviewOrderViewModel)
